[gd_scene load_steps=11 format=3 uid="uid://bieiqc1mo6u2r"]

[ext_resource type="Script" uid="uid://jr2o54qfqnau" path="res://scripts/gui/components/top_bar.gd" id="1_bywe0"]
[ext_resource type="Texture2D" uid="uid://bcb8s6x6fbxgf" path="res://art/graphics/buttons/AudioButton.png" id="1_syrjg"]
[ext_resource type="Texture2D" uid="uid://byh6cahvnhrf5" path="res://art/graphics/buttons/HoveredAudioButton.png" id="2_ch1ap"]
[ext_resource type="Texture2D" uid="uid://bm0bms5q73bt1" path="res://art/graphics/buttons/AudioEnabled.png" id="3_nts21"]
[ext_resource type="Texture2D" uid="uid://d0ep80556tx8d" path="res://art/graphics/buttons/RetryButton.png" id="3_t8k76"]
[ext_resource type="Script" uid="uid://w03yj45yvjjm" path="res://scripts/gui/components/custom_button.gd" id="4_amswt"]
[ext_resource type="Texture2D" uid="uid://bi1cb8spmrc3t" path="res://art/graphics/buttons/HoveredRetryButton.png" id="4_ch1ap"]
[ext_resource type="FontFile" uid="uid://5qehjr47vqyi" path="res://art/font/SkippySharp.ttf" id="4_p8s5q"]
[ext_resource type="Texture2D" uid="uid://m6jdpw2j8lw6" path="res://art/graphics/buttons/HoveredAudioEnabled.png" id="5_glubf"]

[sub_resource type="LabelSettings" id="LabelSettings_nts21"]
font = ExtResource("4_p8s5q")
font_size = 54
font_color = Color(0.101961, 0.0705882, 0.0784314, 1)

[node name="TopBar" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.0
offset_top = -355.0
offset_right = 394.0
offset_bottom = -291.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 30
script = ExtResource("1_bywe0")

[node name="AudioButton" type="TextureButton" parent="."]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("1_syrjg")
texture_hover = ExtResource("2_ch1ap")
ignore_texture_size = true
script = ExtResource("4_amswt")

[node name="NextAudioButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_nts21")
texture_hover = ExtResource("5_glubf")
ignore_texture_size = true
script = ExtResource("4_amswt")

[node name="Text" type="Label" parent="."]
custom_minimum_size = Vector2(600, 64)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
label_settings = SubResource("LabelSettings_nts21")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="TextureButton" parent="."]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_t8k76")
texture_hover = ExtResource("4_ch1ap")
ignore_texture_size = true
script = ExtResource("4_amswt")

[connection signal="pressed" from="AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="AudioButton" to="AudioButton" method="_on_pressed"]
[connection signal="pressed" from="NextAudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="NextAudioButton" to="NextAudioButton" method="_on_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="RetryButton" to="RetryButton" method="_on_pressed"]
